--- a/hieradata/splunk/cluster/corpsec.yaml
+++ b/hieradata/splunk/cluster/corpsec.yaml
@@ -4,7 +4,7 @@ splunk::tcpout: 'ip-172-31-18-136.ap-southeast-2.compute.internal:9997'
 splunk::sslcompatibility: 'intermediate'
 
 splunk::webhook: 'intermediate'
-
+splunk::webhooktest: 'intermediate'
 
 splunk::replication_port: 9887
 splunk::pass4SymmKey:  superceded
