--- a/hieradata/splunk/cluster/corpsec.yaml
+++ b/hieradata/splunk/cluster/corpsec.yaml
@@ -17,6 +17,9 @@ splunk::admin:
   fn: 'CorpSec Splunk Admin'
   email: 'corpsec@shelde.com'
   hash: '$6$MR9IJFF7RBnVA.k1$/30EBSzy0EJKZ94SjHFIUHjQjO3/P/4tx0JmWCp/En47MJceaXsevhBLE2w/ibjHlAUkD6k0U.PmY/noe9Jok0'
+
+splunk::shclustering
+  pass4SymmKey:  corpsec_symmkey_cluster
   
 &clustering_attributes
   master_uri: 'https://ip-172-31-28-232.ap-southeast-2.compute.internal:8089'
