--- a/hieradata/splunk/cluster/corpsec.yaml
+++ b/hieradata/splunk/cluster/corpsec.yaml
@@ -18,7 +18,7 @@ splunk::admin:
   email: 'corpsec@shelde.com'
   hash: '$6$MR9IJFF7RBnVA.k1$/30EBSzy0EJKZ94SjHFIUHjQjO3/P/4tx0JmWCp/En47MJceaXsevhBLE2w/ibjHlAUkD6k0U.PmY/noe9Jok0'
 
-splunk::shclustering
+splunk::clustering
   pass4SymmKey:  corpsec_symmkey_cluster
   
 &clustering_attributes
