--- a/hieradata/splunk/role/searchhead.yaml
+++ b/hieradata/splunk/role/searchhead.yaml
@@ -3,4 +3,5 @@ splunk::type: searchhead
 
 splunk::clustering:
   mode: searchhead
-  <<: *clustering_attributes
+  pass4SymmKey:  corpsec_clustering_symmkey
+#  <<: *clustering_attributes
