--- a/hieradata/splunk/role/searchhead.yaml
+++ b/hieradata/splunk/role/searchhead.yaml
@@ -3,5 +3,5 @@ splunk::type: searchhead
 
 splunk::clustering:
   mode: searchhead
-  pass4SymmKey:  corpsec_clustering_symmkey
+  pass4symmkey:  corpsec_clustering_symmkey
 #  <<: *clustering_attributes
