--- a/hieradata/splunk/cluster/corpsec.yaml
+++ b/hieradata/splunk/cluster/corpsec.yaml
@@ -7,7 +7,7 @@ splunk::webhook: 'intermediate'
 splunk::webhooktest: 'intermediate'
 
 splunk::replication_port: 9887
-splunk::pass4symmkey:  superceded
+#splunk::pass4symmkey:  superceded
 
 splunk::service:
   enable: true
@@ -18,14 +18,14 @@ splunk::admin:
   email: 'corpsec@shelde.com'
   hash: '$6$MR9IJFF7RBnVA.k1$/30EBSzy0EJKZ94SjHFIUHjQjO3/P/4tx0JmWCp/En47MJceaXsevhBLE2w/ibjHlAUkD6k0U.PmY/noe9Jok0'
 
-splunk::clustering
+splunk::clustering:
   pass4symmkey:  corpsec_symmkey_cluster
   
-&clustering_attributes
-  master_uri: 'https://ip-172-31-28-232.ap-southeast-2.compute.internal:8089'
-  replication_factor:  4
-  search_factor:  3
-  pass4symmkey:  whatever
+#&clustering_attributes
+#  master_uri: 'https://ip-172-31-28-232.ap-southeast-2.compute.internal:8089'
+#  replication_factor:  4
+#  search_factor:  3
+#  pass4symmkey:  whatever
 
 
 
