re-enable pass4symmkey

--- a/hieradata/splunk/cluster/corpsec.yaml
+++ b/hieradata/splunk/cluster/corpsec.yaml
@@ -7,7 +7,7 @@ splunk::webhook: 'intermediate'
 splunk::webhooktest: 'intermediate'
 
 splunk::replication_port: 9887
-#splunk::pass4symmkey:  superceded
+splunk::pass4symmkey:  superceded
 
 splunk::service:
   enable: true
@@ -21,11 +21,11 @@ splunk::admin:
 splunk::clustering:
   pass4symmkey:  corpsec_symmkey_cluster
   
-#&clustering_attributes
-#  master_uri: 'https://ip-172-31-28-232.ap-southeast-2.compute.internal:8089'
-#  replication_factor:  4
-#  search_factor:  3
-#  pass4symmkey:  whatever
+&clustering_attributes
+  master_uri: 'https://ip-172-31-28-232.ap-southeast-2.compute.internal:8089'
+  replication_factor:  4
+  search_factor:  3
+  pass4symmkey:  whatever
 
 
 
