--- a/hieradata/splunk/role/searchhead.yaml
+++ b/hieradata/splunk/role/searchhead.yaml
@@ -4,4 +4,4 @@ splunk::type: searchhead
 splunk::clustering:
   mode: searchhead
   pass4symmkey:  corpsec_clustering_symmkey
-#  <<: *clustering_attributes
+  <<: *clustering_attributes
