--- a/hieradata/splunk/cluster/corpsec.yaml
+++ b/hieradata/splunk/cluster/corpsec.yaml
@@ -9,9 +9,9 @@ splunk::webhooktest: 'intermediate'
 splunk::replication_port: 9887
 splunk::pass4symmkey:  superceded
 
-splunk::service:
-  enable: true
-  ensure: running
+#splunk::service:
+#  enable: true
+#  ensure: running
   
 splunk::admin:
   fn: 'CorpSec Splunk Admin'
