change key to shclustering

--- a/hieradata/splunk/role/searchhead.yaml
+++ b/hieradata/splunk/role/searchhead.yaml
@@ -1,7 +1,7 @@
 
 splunk::type: searchhead
 
-splunk::clustering:
+splunk::shclustering:
   mode: searchhead
   pass4symmkey:  corpsec_clustering_symmkey
 #  <<: *clustering_attributes
