--- a/hieradata/splunk/cluster/corpsec.yaml
+++ b/hieradata/splunk/cluster/corpsec.yaml
@@ -38,10 +38,10 @@ splunk::shclustering:
   shd: ip-172-31-28-232.ap-southeast-2.compute.internal:8089
   label: cluster_label
 
-#splunk::splunk_home: /app/splunk_corpsec
-#splunk::splunk_os_user: corpsecuser
+splunk::splunk_home: /app/splunk_corpsec
+splunk::splunk_os_user: corpsecuser
 splunk::splunk_bindip: 1234
-#splunk::splunk_db_dir: /var/corpsec_db
+splunk::splunk_db_dir: /var/corpsec_db
 
 splunk::auth:
   authtype: 'LDAP'
