--- a/hieradata/splunk/cluster/corpsec.yaml
+++ b/hieradata/splunk/cluster/corpsec.yaml
@@ -29,15 +29,15 @@ splunk::admin:
 splunk::clustering:
 # do not indicate the 'mode' in here.  set it in roles yaml.
   pass4symmkey:  corpsec_symmkey_cluster
-  cm: 'ip-172-31-28-232.ap-southeast-2.compute.internal:8089'
+  cm: 'ip-172-31-5-86.ap-southeast-2.compute.internal:8089'
   master_uri: 'https://ip-172-31-28-232.ap-southeast-2.compute.internal:8089'
   replication_factor:  4
   search_factor:  3
-
+  label: clustering_label
   
 splunk::shclustering:
   shd: ip-172-31-28-232.ap-southeast-2.compute.internal:8089
-  label: cluster_label
+  label: shcluster_label
 
 # these setting require more testing
 #splunk::splunk_home: /app/splunk_corpsec
