--- a/hieradata/splunk/cluster/corpsec.yaml
+++ b/hieradata/splunk/cluster/corpsec.yaml
@@ -11,7 +11,7 @@ splunk::ds:     'ip-172-31-28-232.ap-southeast-2.compute.internal:8089'
 splunk::tcpout: 'ip-172-31-18-136.ap-southeast-2.compute.internal:9997'
 
 
-splunk::sslcompatibility: 'modern'
+splunk::sslcompatibility: 'intermediate'
 splunk::replication_port: 9887
 splunk::pass4symmkey:  cluster_symmkey
 
@@ -34,6 +34,10 @@ splunk::clustering:
   replication_factor:  4
   search_factor:  3
   label: clustering_label
+
+splunk::searchpeers:
+  - ip-172-31-5-237.ap-southeast-2.compute.internal
+  
   
 splunk::shclustering:
   shd: ip-172-31-28-232.ap-southeast-2.compute.internal:8089
