--- a/hieradata/splunk/cluster/corpsec.yaml
+++ b/hieradata/splunk/cluster/corpsec.yaml
@@ -28,7 +28,12 @@ splunk::admin:
 
 splunk::clustering:
 # do not indicate the 'mode' in here.  set it in roles yaml.
-
+  pass4symmkey:  corpsec_symmkey_cluster
+  cm: 'ip-172-31-5-86.ap-southeast-2.compute.internal:8089'
+  master_uri: 'https://ip-172-31-28-232.ap-southeast-2.compute.internal:8089'
+  replication_factor:  4
+  search_factor:  3
+  label: clustering_label  
 
 splunk::searchpeers:
   - ip-172-31-5-237.ap-southeast-2.compute.internal
