--- a/hieradata/splunk/cluster/corpsec.yaml
+++ b/hieradata/splunk/cluster/corpsec.yaml
@@ -26,13 +26,13 @@ splunk::admin:
   hash: '$1$l/4odBwP$fUuCqCL2FodmCb1WmYxAS0'
 
 
-splunk::clustering:
-  pass4symmkey:  corpsec_symmkey_cluster
-  cm: 'ip-172-31-5-86.ap-southeast-2.compute.internal:8089'
-  master_uri: 'https://ip-172-31-28-232.ap-southeast-2.compute.internal:8089'
-  replication_factor:  4
-  search_factor:  3
-  label: clustering_label   
+#splunk::clustering:
+#  pass4symmkey:  corpsec_symmkey_cluster
+#  cm: 'ip-172-31-5-86.ap-southeast-2.compute.internal:8089'
+#  master_uri: 'https://ip-172-31-28-232.ap-southeast-2.compute.internal:8089'
+#  replication_factor:  4
+#  search_factor:  3
+#  label: clustering_label   
 # do not indicate the 'mode' in here.  set it in roles yaml.
  
 
