--- a/hieradata/splunk/role/searchhead.yaml
+++ b/hieradata/splunk/role/searchhead.yaml
@@ -1,7 +1,10 @@
 
 splunk::type: searchhead
 
-splunk::clustering:
+splunk::shclustering:
   mode: searchhead
-  pass4symmkey:  corpsec_clustering_symmkey
-#  <<: *clustering_attributes
+  pass4symmkey:  corpsec_symmkey_cluster
+  cm: 'ip-172-31-5-86.ap-southeast-2.compute.internal:8089'
+  replication_factor:  2
+  label: cluster_label
+  shd: 
