--- a/hieradata/splunk/cluster/corpsec.yaml
+++ b/hieradata/splunk/cluster/corpsec.yaml
@@ -7,9 +7,9 @@
 # All variables in this cluster yaml file indicates the following:
 # he common <name of parameter here> for members of the cluster
 
-splunk::ds:     'ip-172-31-6-6.ap-southeast-2.compute.internal:8089'
+splunk::deployment_server: 'ip-172-31-6-6.ap-southeast-2.compute.internal:8089'
+splunk::license_master: 'ip-172-31-10-144.ap-southeast-2.compute.internal:8089'
 splunk::tcpout: 'ip-172-31-5-237.ap-southeast-2.compute.internal:9997'
-
 
 splunk::sslcompatibility: intermediate
 splunk::replication_port: 9887
@@ -41,7 +41,7 @@ splunk::searchpeers:
   
   
 splunk::shclustering:
-  shd: ip-172-31-28-232.ap-southeast-2.compute.internal:8089
+  deployer: 'ip-172-31-0-121.ap-southeast-2.compute.internal:8089'
   label: shcluster_label
 
 # these setting require more testing
