--- a/hieradata/splunk/role/searchhead.yaml
+++ b/hieradata/splunk/role/searchhead.yaml
@@ -4,7 +4,7 @@ splunk::type: searchhead
 splunk::shclustering:
   mode: searchhead
   pass4symmkey:  corpsec_symmkey_cluster
-  cm: 'ip-172-31-5-86.ap-southeast-2.compute.internal:8089'
+  master: 'ip-172-31-5-86.ap-southeast-2.compute.internal:8089'
   replication_factor:  2
   label: cluster_label
   shd: 
