--- a/hieradata/splunk/role/indexer.yaml
+++ b/hieradata/splunk/role/indexer.yaml
@@ -3,7 +3,7 @@ splunk::type: indexer
 
 splunk::clustering:
   mode: slave
-  pass4symmkey:  corpsec_symmkey_cluster
-  master: 'ip-172-31-5-86.ap-southeast-2.compute.internal:8089'
-  replication_factor:  2
-  search_factor:  2
+#  pass4symmkey:  corpsec_symmkey_cluster
+#  master: 'ip-172-31-5-86.ap-southeast-2.compute.internal:8089'
+#  replication_factor:  2
+#  search_factor:  2
