--- a/hieradata/splunk/cluster/corpsec.yaml
+++ b/hieradata/splunk/cluster/corpsec.yaml
@@ -18,7 +18,9 @@ splunk::pass4symmkey:  cluster_symmkey
 #splunk::service:
 #  enable: true
 #  ensure: running
-  
+
+# this section configures the default admin account with non-default credentials
+# this applies to all nodes of the same cluster fact.  
 splunk::admin:
   fn: 'CorpSec Splunk Admin'
   email: corpsec@shelde.com
@@ -26,6 +28,7 @@ splunk::admin:
   hash: '$1$l/4odBwP$fUuCqCL2FodmCb1WmYxAS0'
 
 
+# this section configures the search peers clustering stanza
 splunk::clustering:
   pass4symmkey:  corpsec_symmkey_cluster
   master_uri: 'ip-172-31-5-86.ap-southeast-2.compute.internal:8089'
@@ -34,14 +37,15 @@ splunk::clustering:
   cluster_label: corpsec_clustering_label   
 # do not indicate the 'mode' in here.  set it in roles yaml.
  
-
+# this list the search peers to be used by the searchheads
 splunk::searchpeers:
   - ip-172-31-5-237.ap-southeast-2.compute.internal
-  
+
+# this list the search heads that will be added to the monitoring console (dmc) as peers
 splunk::searchheads:
   - ip-172-31-5-225.ap-southeast-2.compute.internal
 
-  
+# this section configures the search heads shclustering stanza  
 splunk::shclustering:
   pass4symmkey:  corpsec_symmkey_cluster
   master_uri: 'ip-172-31-5-86.ap-southeast-2.compute.internal:8089'
@@ -49,13 +53,15 @@ splunk::shclustering:
   search_factor:  1
   deployer: 'ip-172-31-0-121.ap-southeast-2.compute.internal:8089'
   cluster_label: corpsec_shcluster_label
-  
+
 
 # these setting require more testing
 #splunk::splunk_home: /app/splunk_corpsec
 #splunk::splunk_os_user: corpsecuser
 #splunk::splunk_db_dir: /var/corpsec_db
 
+# this section configures the defauly authentication and authorization settings
+# this applies to all nodes of the same cluster fact.  
 splunk::auth:
   authtype: 'LDAP'
   ldap_binddn: 'myldap_binddn'
