unquote the string

--- a/hieradata/splunk/application/myrlo.yaml
+++ b/hieradata/splunk/application/myrlo.yaml
@@ -3,5 +3,5 @@
 
 
 splunk::phonehomeintervalinsec: 300
-splunk::inputport: 'donotapply'
+splunk::inputport: donotapply
 #splunk::clientname_prefix: pickaname
