configure ldap_usernameattribute

--- a/hieradata/splunk/cluster/corpsec.yaml
+++ b/hieradata/splunk/cluster/corpsec.yaml
@@ -76,6 +76,7 @@ splunk::auth:
   ldap_sslenabled: true
   ldap_host: 'global-ldap.lb.apps.com'
   ldap_userbasedn: 'OU=Corporate,OU=Users,OU=AU,DC=global,DC=com'
+  ldap_usernameattribute: 'samaccountname'
 
   
 splunk::rolemap:  
