--- a/hieradata/splunk/cluster/george.yaml
+++ b/hieradata/splunk/cluster/george.yaml
@@ -53,17 +53,17 @@ splunk::admin:
 
 # this section configures the search peers clustering stanza
 splunk::clustering:
-  pass4symmkey:  corpsec_symmkey_cluster
-  master_uri: 'ip-172-31-5-86.ap-southeast-2.compute.internal:8089'
+  pass4symmkey:  george_symmkey_cluster
+  master_uri: 'ip-172-31-25-63.ap-southeast-2.compute.internal:8089'
   replication_factor:  1
   search_factor:  1
-  cluster_label: corpsec_clustering_label   
+  cluster_label: george_clustering_label   
 # do not indicate the 'mode' in here.  set it in roles yaml.
  
 # this section configures the search heads shclustering stanza  
 splunk::shclustering:
   pass4symmkey:  corpsec_symmkey_cluster
-  master_uri: 'ip-172-31-5-86.ap-southeast-2.compute.internal:8089'
+  master_uri: 'ip-172-31-25-63.ap-southeast-2.compute.internal:8089'
   replication_factor:  1
   search_factor:  1
   deployer: 'ip-172-31-0-121.ap-southeast-2.compute.internal:8089'
