--- a/hieradata/splunk/cluster/review.yaml
+++ b/hieradata/splunk/cluster/review.yaml
@@ -3,17 +3,14 @@
 # The setting indicated here are applied to all members nodes indicated with the cluster fact.
 # 
 #
+
 # All variables in this cluster yaml file indicates the following:
 # he common <name of parameter here> for members of the cluster
-splunk::license_master: 'ip-172-31-31-250.ap-southeast-2.compute.internal:8089'
 
-
-
-
-
+splunk::deployment_server: 'ip-172-31-31-249.ap-southeast-2.compute.internal:8089'
 splunk::cluster_master: &cluster_master 'ip-172-31-25-63.ap-southeast-2.compute.internal:8089'
 splunk::deployer: &deployer *cluster_master
-splunk::deployment_server: 'ip-172-31-31-249.ap-southeast-2.compute.internal:8089'
+#splunk::deployment_server: 'ip-172-31-31-249.ap-southeast-2.compute.internal:8089'
 
 # this list the search heads that will be added to the monitoring console (dmc) as peers
 splunk::searchheads: &searchheads
